Expose TelegramError with status code

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -28,6 +28,7 @@ multipart = { version = "0.16", default-features = false, features = ["client"] 
 
 telegram-bot-raw = { version = "0.7.0", path = "../raw" }
 
+http = "0.2"
 hyper = "0.13"
 hyper-tls = { version = "0.4", optional = true  }
 futures = "0.3"
