--- a/raw/Cargo.toml
+++ b/raw/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["api-bindings"]
 license = "MIT"
 
 [dependencies]
+http = "0.2"
 bytes = "0.5"
 serde = { version = "1", features = ["derive"] }
 serde_derive = "1"
